# env-embeddings

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  justfile  mkdocs.yml  mypy.ini  project.justfile  pyproject.toml  sitemap.xml  test_rf_module.py
.claude/: settings.json  settings.local.json
.github/: ai-controllers.json
.github/actions/claude-code-action/: action.yml
.github/workflows/: ai.yml  claude.yml  deploy-docs.yaml  dragon-ai.yml  main.yaml  pypi-publish.yaml  test_pages_build.yaml
BIOPROJECT_QUALITY/: index.html
BULK_UPLOAD_WORKFLOW/: index.html
MISSING_ISSUES_ANALYSIS/: index.html
NMDC_COMPLETE_WORKFLOW_20250106/: index.html
NOTEBOOK_GUIDE/: index.html
about/: index.html
analysis/FINDINGS/: index.html
analysis/SCIENTIFIC_ANALYSIS/: index.html
data/: .gitignore  date_and_latlon_samples_extended_ONLY_ENVO_SAMPLE_100.tsv  date_and_latlon_samples_extended_ONLY_ENVO_SAMPLE_100_with_both_embeddings.tsv  date_and_latlon_samples_extended_ONLY_ENVO_SAMPLE_100_with_embeddings.tsv  date_and_latlon_samples_extended_SAMPLE.tsv  date_and_latlon_samples_extended_SAMPLE_with_embeddings.tsv
data_file_analysis_2025-10-03/: index.html
development/CI_SETUP/: index.html
development/PERFORMANCE_OPTIMIZATIONS/: index.html
development/improvements_summary/: index.html
docs/: BIOPROJECT_QUALITY.md  BULK_UPLOAD_WORKFLOW.md  ISSUES_CREATED_SUMMARY.md  MISSING_ISSUES_ANALYSIS.md  MIXS_TRIAD_ANALYSIS.md  MIXS_TRIAD_RENAME_SUMMARY.md  NMDC_COMPLETE_WORKFLOW_20250106.md  NOTEBOOK_GUIDE.md  README.md  RF_EXECUTION_ANALYSIS.md  RF_NOTEBOOK_READINESS.md  about.md  data_file_analysis_2025-10-03.md  index.md
docs/analysis/: FINDINGS.md  SCIENTIFIC_ANALYSIS.md
docs/development/: CI_SETUP.md  PERFORMANCE_OPTIMIZATIONS.md  improvements_summary.md
docs/research/: RESEARCH_VISION.md  column_mapping.md  google_earth_embeddings.md
examples/: README.md
notebooks/: random_forest_envo_prediction.ipynb  random_forest_envo_prediction_executed.ipynb  rf_multi_source_clean.ipynb  similarity_analysis.ipynb
notebooks/old/: random_forest_envo_prediction.ipynb
pr-preview/pr-15/: sitemap.xml
pr-preview/pr-2/about/: index.html
pr-preview/pr-35/: sitemap.xml
pr-preview/pr-39/: sitemap.xml
pr-preview/pr-39/search/: search_index.json
pr-preview/pr-41/: sitemap.xml
pr-preview/pr-48/BULK_UPLOAD_WORKFLOW/: index.html
pr-preview/pr-50/: sitemap.xml
pr-preview/pr-50/MISSING_ISSUES_ANALYSIS/: index.html
pr-preview/pr-59/: sitemap.xml
pr-preview/pr-6/: index.html
pr-preview/pr-66/: sitemap.xml
pr-preview/pr-68/: sitemap.xml
pr-preview/pr-69/: index.html
pr-preview/pr-9/: 404.html
project/: README.md
research/RESEARCH_VISION/: index.html
research/column_mapping/: index.html
research/google_earth_embeddings/: index.html
results/mixs_triad_analysis/: analysis_report.md  gold_env_broad_scale_frequency.csv  gold_env_broad_scale_parents.csv  gold_env_broad_scale_stats.json  gold_env_local_scale_frequency.csv  gold_env_local_scale_parents.csv  gold_env_local_scale_stats.json  gold_env_medium_frequency.csv  gold_env_medium_parents.csv  gold_env_medium_stats.json  ncbi_env_broad_scale_frequency.csv  ncbi_env_broad_scale_parents.csv  ncbi_env_broad_scale_stats.json  ncbi_env_local_scale_frequency.csv  ncbi_env_local_scale_parents.csv  ncbi_env_local_scale_stats.json  ncbi_env_medium_frequency.csv  ncbi_env_medium_parents.csv  ncbi_env_medium_stats.json  nmdc_env_broad_scale_frequency.csv  nmdc_env_broad_scale_parents.csv  nmdc_env_broad_scale_stats.json  nmdc_env_local_scale_frequency.csv  nmdc_env_local_scale_parents.csv  nmdc_env_local_scale_stats.json  nmdc_env_medium_frequency.csv  nmdc_env_medium_parents.csv  nmdc_env_medium_stats.json
results/rf_multi_source/: comparison_results.csv  per_class_metrics.tsv
search/: search_index.json
src/env_embeddings/: __init__.py  bioproject_quality.py  cli.py  earth_engine.py  ee_bulk_process.py  envo_embeddings.py  mixs_triad_analysis.py  rf_analysis.py  sample_processor.py
tests/: __init__.py  test_earth_engine.py
(+15 files in other folders)
