[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "env_embeddings"
description = "Simple experiment to compare ENVO similarity to google embedding cosine similarity "
authors = [
  {name = "Justin Reese", email = "justinreese@lbl.gov"},
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dynamic = ["version"]

dependencies = [
  "typer >= 0.9.0",
  "linkml-runtime >=1.9.4",
  # IMPORTANT: Do NOT add `ee` (PyPI) — it's a legacy package.
  # Earth Engine is provided by `earthengine-api` but imported as `ee`.
  "earthengine-api>=1.6.8",
  "numpy>=2.2.6",
  # NOTE: sentence-transformers removed due to PyTorch Intel Mac compatibility issues
  # "sentence-transformers>=5.1.0",
  "pandas>=2.3.2",
  "tqdm>=4.67.1",
  "ols-client>=0.2.1",
  "requests-cache>=1.2.1",
  "diskcache>=5.6.3",
  "global-land-mask>=1.0.0",
  "pymongo>=4.0.0",
  "scikit-learn>=1.7.2",
  "scipy>=1.15.3",
  "oaklib>=0.6.23",
  "tabulate>=0.9.0",
  "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "linkml>=1.9.3",
    "mypy>=1.17.1",
    "ruff>=0.4.8",
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "jupyter>=1.0.0",
    "mknotebooks>= 0.8.0",
    "types-tqdm>=4.67.0",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "pytest-cov>=7.0.0",
    "deptry>=0.23.1",
    "pandas-stubs>=2.3.2.250926",
    "scipy-stubs>=1.15.3.0",
    "types-tabulate>=0.9.0.20241207",
]

[project.scripts]
env-embeddings = "env_embeddings.cli:main"
mixs-triad-analysis = "env_embeddings.mixs_triad_analysis:app"


# See https://hatch.pypa.io/latest/config/build/#file-selection for how to
# explicitly include files other than default into the build distributions.

[tool.hatch.build.targets.wheel]
packages = ["src/env_embeddings"]
include = [
  "src/env_embeddings/py.typed",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

# Ruff configuration - exclude notebooks directory from linting
[tool.ruff]
exclude = [
    "notebooks/",
    ".venv/",
    "__pycache__/",
]

# Ref.: https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
[tool.pytest.ini_options]
testpaths = ["tests"]

# Ref.: https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version = "3.11"
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "env_embeddings.embeddings"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ee"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "diskcache"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ols_client"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "global_land_mask"
ignore_missing_imports = true

# Ref.: https://fpgmaas/deptry
[tool.deptry]
per_rule_ignores = {DEP002 = ["linkml-runtime", "numpy", "requests-cache", "global-land-mask", "oaklib"], DEP003 = ["typing_extensions"]}

# Ref.: https://github.com/codespell-project/codespell
[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "uv.lock",
  "project/*",
  "src/env_embeddings/datamodel/env_embeddings_pydantic.py",
  "src/env_embeddings/datamodel/env_embeddings.py",
]

# Reminder: words have to be lowercased for the ignore-words-list
ignore-words-list = "linke"
quiet-level = 3

# Ref.: https://github.com/crate-ci/typos (spell checker)
[tool.typos.default.extend-words]
linke = "linke"
[tool.typos.files]
extend-exclude = [
  "LICENSE",
  "uv.lock",
  "pyproject.toml",
  "project/*",
  "src/env_embeddings/datamodel/env_embeddings_pydantic.py",
  "src/env_embeddings/datamodel/env_embeddings.py",
]
